# dj-cookie-gen

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .env.dev  Makefile  README.md  docker-compose.yml
{{ cookiecutter.project_name }}/app/: pyproject.toml
{{ cookiecutter.project_name }}/app/_dj_setups/: celery.py  settings.py  storages.py  urls.py
{{ cookiecutter.project_name }}/deploy/: app.Dockerfile  appBase.Dockerfile  poetryTool.Dockerfile  poetry_setup.sh  poetry_shell.sh  poetry_update_lock.sh
