[tool.poetry]
name = "{{ cookiecutter.dj_project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author }}"]
license = "{{ cookiecutter.project_license }}"

packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-jazzmin = "^2.5.0"
boto3 = "^1.21.43"
celery = { extras = ["redis"], version = "^5.2.6" }
psycopg2 = "^2.9.3"
django-storages = "^1.12.3"
Unidecode = "^1.3.4"
django-environ = "^0.9.0"
django-redis = "^5.2.0"
django-celery-results = "^2.3.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"